examples/test/testpolicy17234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17234
  namespace: namespace123
spec:
  podSelector:
    matchLabels:
      key7: value1
      key29: value22
      key32: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value35
      podSelector:
        matchLabels:
          key41: value11
